# partage-lock-update

./: .gitignore  README.md  package-lock.json  package.json
contract/: Cargo.toml  test.sh
contract/neardev/: dev-account  dev-account.env
contract/src/: lib.rs  models.rs  utils.rs
frontend/: App.js  index.html  index.js  near-interface.js  near-wallet.js  package-lock.json  package.json  ui-components.js
frontend/.parcel-cache/: 1ba6b0788801943b  40ddeda4a7a72709.txt  449a6c1f78ee06fb  a384f0ec43b99fbc  c300a161f5844384  df290d0cf5c2ce7c.txt  f827e36c1bc8e59f  lock.mdb
frontend/assets/css/: style.css
frontend/components/: About.js  Calendar.js  Hero.js  PinDisplay.js  Services.js  Signheader.js  contact.js  footer.js  header.js  old-cal.js  save.js
